tests: make standard ignore tests

--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "devDependencies": {
     "jest": "^24.9.0",
     "standard": "^14.3.1"
+  },
+  "standard": {
+    "ignore": [
+      "**/*.test.js"
+    ]
   }
 }
